@@ -12,8 +12,10 @@ diag "Alien::Meson->runtime_prop ", Dumper( [ Alien::Meson->runtime_prop ] );
 
 diag "Alien::Meson->exe: ", Dumper( [ Alien::Meson->exe ] );
 
-helper_ok 'meson';
-interpolate_template_is '%{meson}', join " ", Alien::Meson->exe;
+like warning {
+  helper_ok 'meson';
+  interpolate_template_is '%{meson}', join " ", Alien::Meson->exe;
+}, qr/deprecated/, 'helper is deprecated';
 
 run_ok([ Alien::Meson->exe, qw(--version) ])
   ->success
